--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/mypicji.jpg" alt="Vishal's Profile picture" height="160"></td>
+      <td><img src="mypicji.jpg" alt="Vishal's Profile picture" height="160"></td>
       <td>
         <h1>Vishal Jatia</h1>
         <p><em>First year student at <strong><a href="http://www.nsit.ac.in/">NSUT</a></strong></em></p>
